<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.baiyi.cratos</groupId>
        <artifactId>cratos</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>cratos-eds-core</artifactId>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.baiyi.cratos</groupId>
            <artifactId>cratos-common</artifactId>
        </dependency>
        <dependency>
            <groupId>com.baiyi.cratos</groupId>
            <artifactId>cratos-service</artifactId>
        </dependency>
        <!--        aws sdk 2.x-->
        <dependency>
            <groupId>software.amazon.awssdk</groupId>
            <artifactId>sts</artifactId>
            <version>${aws-java-sdk2.version}</version>
        </dependency>
        <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>aws-java-sdk-sts</artifactId>
            <version>${aws-java-sdk.version}</version>
        </dependency>
        <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>aws-java-sdk-core</artifactId>
            <version>${aws-java-sdk.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.api.grpc</groupId>
            <artifactId>proto-google-iam-admin-v1</artifactId>
            <version>3.47.0</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

</project>